fix the scrollbar with wallet display

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -140,6 +140,10 @@ body {
 
 #wallet-after-connect{
   display: none;
+  overflow: hidden;
+}
+
+#wallet-erc20-display {
   overflow-y: auto;
-  overflow-x: hidden;
+  padding: 0 15px;
 }
